# vulcanexus

./: .gitignore  .gitmodules  README.md  readthedocs.yaml  vulcanexus.key  vulcanexus.repos
.github/docker/: Dockerfile  linux_bisource_installation.bash  run.bash
.github/workflows/: docs.yaml  humble_binaries_ubuntu.yaml  humble_sources_ubuntu.yaml  install_linux_from_binaries.yaml  install_linux_from_sources.yaml  iron_binaries_ubuntu.yaml  iron_sources_ubuntu.yaml  jazzy_binaries_ubuntu.yaml  jazzy_sources_ubuntu.yaml  kilted_binaries_ubuntu.yaml  kilted_sources_ubuntu.yaml  mirror.yml  test_docker.yaml
code/ds_wan_tcp_tutorial/: node_configuration.xml  server_configuration.xml
code/microservices/clients_py/: package.xml  setup.cfg  setup.py
code/microservices/clients_py/clients_py/: microservice_client_addition.py  microservice_client_subtraction.py
code/microservices/microservers_py/: package.xml  setup.cfg  setup.py
code/microservices/microservers_py/microservers_py/: microservice_server_addition.py  microservice_server_subtraction.py
code/monitor_sql_tutorial/: CMakeLists.txt  package.xml  vulcanexus_monitor.db
code/monitor_sql_tutorial/src/: sql_monitor.cpp
code/monitor_tutorial/: CMakeLists.txt  package.xml
code/monitor_tutorial/src/: monitor.cpp
code/turtlesim/: CMakeLists.txt  package.xml
code/turtlesim/include/docs_turtlesim/: KeyedTurtle.hpp  QtMultiTurtle.hpp
code/turtlesim/msg/: KeyedPose.idl  KeyedTwist.idl  Pose.msg  Vector3.idl
code/turtlesim/src/: KeyedTurtle.cpp  QtMultiTurtle.cpp  SquareMove.cpp  controller_keyed_turtle.cpp
code/vulcanai_turtlesim/vulcanai_turtlesim_demo/: package.xml  setup.cfg  setup.py
code/vulcanai_turtlesim/vulcanai_turtlesim_demo/vulcanai_turtlesim_demo/: ros2_node.py  turtlesim_tools.py
docs/: 404.rst  BuildDocs.cmake  Makefile  conf.py  index.rst  requirements.txt  ros2_docs_spelling_wordlist.txt
docs/resources/micro/getting_started/: CMakeLists.txt  micro_publisher.c  micro_subscriber.c
docs/resources/scripts/: linux_binary_installation.bash  linux_source_installation.bash
docs/resources/terminalizer/: config.yml  test.yml
docs/resources/tutorials/cloud_tutorial/: ConfigMap.yaml  run.bash  (+3 more)
docs/resources/tutorials/core/deployment/dds2vulcanexus/topic/: CMakeLists.txt  Dockerfile  README.md  package.xml
docs/resources/tutorials/core/deployment/dds2vulcanexus/topic/fastdds_app/: subscriber.cpp
docs/resources/tutorials/core/deployment/dds2vulcanexus/topic/idl/: HelloWorld.idl
docs/resources/tutorials/core/deployment/dds2vulcanexus/topic/vulcanexus_app/: publisher.cpp
docs/resources/tutorials/core/deployment/keys/: CMakeLists.txt  README.md
docs/resources/tutorials/core/deployment/keys/demo_keys_cpp/: CMakeLists.txt  README.md  package.xml
docs/resources/tutorials/core/deployment/keys/demo_keys_cpp/launch/: keyed_sensors_launch.py  multiple_topic_sensors_launch.py  single_topic_sensors_launch.py
docs/resources/tutorials/core/deployment/keys/demo_keys_cpp/msg/: KeyedSensorDataMsg.idl  SensorDataMsg.idl
docs/resources/tutorials/core/deployment/keys/demo_keys_cpp/src/: keyed_controller.cpp  keyed_sensor.cpp  multiple_topic_controller.cpp  multiple_topic_sensor.cpp  single_topic_controller.cpp  single_topic_sensor.cpp
docs/resources/tutorials/core/deployment/keys/demo_keys_filtering_cpp/: CMakeLists.txt  README.md  package.xml
docs/resources/tutorials/core/deployment/keys/demo_keys_filtering_cpp/launch/: keyed_sensors_launch.py
docs/resources/tutorials/core/deployment/keys/demo_keys_filtering_cpp/msg/: KeyedSensorDataMsg.idl
docs/resources/tutorials/core/deployment/keys/demo_keys_filtering_cpp/src/: filtered_keyed_controller.cpp  filtered_keyed_sensor.cpp
docs/resources/tutorials/core/deployment/keys/msg/: SensorDataMsg.idl
docs/resources/tutorials/core/deployment/keys/src/: controller.cpp  left_sensor.cpp  right_sensor.cpp
docs/resources/tutorials/core/qos/mutable/vulcanexus_change_mutable_qos/: CMakeLists.txt  package.xml
docs/resources/tutorials/core/qos/mutable/vulcanexus_change_mutable_qos/src/: change_mutable_qos_pub1.cpp  change_mutable_qos_pub2.cpp  change_mutable_qos_publisher.cpp  change_mutable_qos_sub.cpp  change_mutable_qos_subscriber.cpp  large_ownership_strength.xml  small_ownership_strength.xml  subscriber_exclusive_ownership.xml
docs/rst/: spelling_wordlist.txt
docs/rst/_templates/: footer.html
docs/rst/appendixes/: glossary.rst
docs/rst/enhancements/: intro.rst
docs/rst/exports/: alias.include
docs/rst/formalia/: titlepage.rst
docs/rst/hri/: intro.rst
docs/rst/installation/: docker.rst  installation_manual.rst  linux_binary_installation.rst  linux_installation.rst  linux_source_installation.rst
docs/rst/introduction/: developer_tools.rst  introduction.rst  metapackages.rst  middleware.rst
docs/rst/microros_documentation/: index.rst
docs/rst/notes/: notes.rst
docs/rst/tutorials/: cloud_tutorial.rst  microros_tutorial.rst  pkcs11_tutorial.rst  tools_tutorial.rst  tutorials.rst
docs/rst/tutorials/tools/monitor_with_backend/code/monitor/: CMakeLists.txt  package.xml
docs/rst/tutorials/tools/monitor_with_backend/code/monitor/src/: monitor.cpp
docs/rst/use_cases/: use_cases.rst
docs/rst/vulcanai/: vulcanai_introduction.rst
fastdds_cli/: package.xml  setup.cfg  setup.py
fastdds_cli/fastdds_cli/: discovery_server.py  executor.py  shm.py  xml.py
resources/py/: rosbotxl_astra_navigation_mapping_launch.py
resources/xml/: disable_fastdds_shm.xml
vulcanexus_base/: CMakeLists.txt  README.md  colcon.pkg
vulcanexus_base/environment/: vulcanexus_base-setup.bash  vulcanexus_base-setup.bash.in
vulcanexus_base/resource/: package.dsv
vulcanexus_test/: CMakeLists.txt  package.xml
vulcanexus_test/compose/: CMakeLists.txt  docker-compose.sh
vulcanexus_test/compose/scripts/: execute_and_validate.py  log.py  utils.py
vulcanexus_test/compose/test_cases/fastdds_cli/discovery_server/: compose.yml
vulcanexus_test/compose/test_cases/fastdds_cli/shm/: compose.yml
vulcanexus_test/compose/test_cases/fastdds_cli/xml/: compose.yml
(+298 files in other folders)
