<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastdds_cli</name>
  <version>0.0.1</version>
  <description>
    A command line interface for Fast DDS.
  </description>
  <maintainer email="juanlopez@eprosima.com">juan</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/vulcanexus/issues</url>
  <url type="repository">https://github.com/eProsima/vulcanexus</url>

  <depend>fastdds</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
