<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vulcanexus_test</name>
  <version>0.0.1</version>
  <description>
     Vulcanexus tests.
  </description>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/vulcanexus/issues</url>
  <url type="repository">https://github.com/eProsima/vulcanexus</url>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
