<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monitor_tutorial</name>
  <version>0.0.0</version>
  <description>First application as a ROS 2 package to monitor your ROS 2 deployment.</description>
  <maintainer email="irenebandera@eprosima.com">Irene Bandera</maintainer>
  <maintainer email="raul@eprosima.com">Raul Sanchez-Mateos Lizano</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fastcdr</depend>
  <depend>fastdds</depend>
  <depend>fastdds_statistics_backend</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
