<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">

  <name>clients_py</name>

  <version>0.0.0</version>

  <description>Examples of minimal service clients using rclpy.</description>

  <maintainer email="javierparis@eprosima.com">Javier Paris</maintainer>
  <author email="javierparis@eprosima.com">Javier Paris</author>

  <license>Apache License 2.0</license>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
