<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vulcanai_turtlesim_demo</name>
  <version>0.1.0</version>
  <description>Demo package for VulcanAI library with ROS 2 turtlesim</description>
  <author email="carlosferreira@eprosima.com">Carlos Ferreira</author>
  <maintainer email="carlosferreira@eprosima.com">Carlos Ferreira</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <export>
      <build_type>ament_python</build_type>
  </export>
</package>
