<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dds2vulcanexus</name>
  <version>0.1.0</version>
  <description>Vulcanexus - Fast DDS intercommunication demo</description>
  <maintainer email="eduardoponz@eprosima.com">Eduardo Ponz</maintainer>
  <license>Apache License 2.0</license>
  <author email="eduardoponz@eprosima.com">Eduardo Ponz</author>
  <depend>builtin_interfaces</depend>
  <depend>fastcdr</depend>
  <depend>fastddsgen</depend>
  <depend>fastrtps</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
